--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DBController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -144,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\DB\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
