--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -129,6 +129,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AirlinersDB.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\UsuarioLogin.cs" />
+    <Compile Include="Models\UsuarioRegistro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
