--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -93,6 +93,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\Styles.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -101,7 +102,6 @@
     <Content Include="Models\AirlinersDB.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>AirlinersDB.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
