Empezando los problemas

--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -159,6 +159,8 @@
     <Content Include="Scripts\jquery-2.2.0.min.map" />
     <Content Include="Views\Foto\AñadirFoto.cshtml" />
     <Content Include="Views\Foto\MasInfo.cshtml" />
+    <Content Include="Views\Home\PerfilUsuario.cshtml" />
+    <Content Include="Views\Foto\TusFotos.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
