Faltan album, editar y eliminar foto y editar usuario

--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -165,6 +165,8 @@
     <Content Include="Views\Home\PerfilUsuario.cshtml" />
     <Content Include="Views\Foto\TusFotos.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Detalles.cshtml" />
+    <Content Include="Views\Home\AñadirAlbum.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
