editar foto OK, falta editar usu y eliminar usu y album (mostrar too) y afinar album

--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -166,8 +166,8 @@
     <Content Include="Views\Foto\TusFotos.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Detalles.cshtml" />
-    <Content Include="Views\Home\AñadirAlbum.cshtml" />
     <Content Include="Views\Home\PerfilUsuario.cshtml" />
+    <Content Include="Views\Foto\EditarFoto.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
