Modulo de las Fotos OK

--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -172,6 +172,8 @@
     <Content Include="Views\Home\PerfilUsuario.cshtml" />
     <Content Include="Views\Foto\EditarFoto.cshtml" />
     <Content Include="Views\Foto\EliminarFoto.cshtml" />
+    <Content Include="Views\Home\EditarUsuario.cshtml" />
+    <Content Include="Views\Home\EliminarCuenta.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
