--- a/Airliners.net/Airliners.net/Airliners.net.csproj
+++ b/Airliners.net/Airliners.net/Airliners.net.csproj
@@ -174,6 +174,9 @@
     <Content Include="Views\Foto\EliminarFoto.cshtml" />
     <Content Include="Views\Home\EditarUsuario.cshtml" />
     <Content Include="Views\Home\EliminarCuenta.cshtml" />
+    <Content Include="Views\Home\Album.cshtml" />
+    <Content Include="Views\Foto\VerAlbum.cshtml" />
+    <Content Include="Views\Foto\EliminarAlbum.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
