--- a/Airliners.net/Airliners.net/Web.config
+++ b/Airliners.net/Airliners.net/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="Airliners_netConnectionString"
-      connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=Airliners.net;Integrated Security=True;Connect Timeout=30"
+      connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=Airliners;Integrated Security=True;Connect Timeout=30"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
@@ -18,6 +18,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+    <sessionState timeout="20"></sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
